plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
	id 'org.sonarqube' version '6.0.1.5171'
}

springBoot {
	mainClass = 'com.example.DemoApplication'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
	testImplementation 'org.testcontainers:mysql:1.20.1'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
}

tasks.named('test') {
    useJUnitPlatform()
    // Agregar Mockito como agente
    jvmArgs = ["-javaagent:${classpath.find { it.name.contains('byte-buddy-agent') }.absolutePath}"]
}

// IMPORTANTE: La flag '-parameters' es REQUERIDA por Spring para resolver parámetros en request mappings
// Sin ella, obtendrás: "Name for argument of type [java.lang.Integer] not specified, and parameter name information not available"
// Si experimentas este error:
//   1. Ejecuta: ./gradlew clean build
//   2. Reinicia la aplicación Spring Boot
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('-parameters')
	options.encoding = 'UTF-8'
}

// Task conveniente para reconstruir desde cero
task buildFresh() {
	dependsOn clean, build
	description = 'Limpia y construye desde cero (útil si hay errores de compilación)'
}

// ===== JaCoCo (Cobertura de Tests) =====
jacoco {
	toolVersion = "0.8.12"
}

tasks.named('test') {
	ignoreFailures = true
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}
}

// ===== SonarQube Configuration =====
sonarqube {
	properties {
		property "sonar.projectKey", "ManuelRisco_PIZZA_HUT_MVP_Backend"
		property "sonar.projectName", "Pizza Hut MVP - Backend"
		property "sonar.host.url", System.getenv("SONAR_HOST_URL") ?: "http://localhost:9000"
		property "sonar.token", System.getenv("SONAR_TOKEN") ?: ""
		property "sonar.java.source", "21"
		property "sonar.coverage.jacoco.xmlReportPaths", "${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"
		property "sonar.exclusions", "**/config/**,**/dto/**,**/models/**"
	}
}
